examples/schemaregistry/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schema-registry
  namespace: confluent
  labels:
    app: schema-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schema-registry
  template:
    metadata:
      labels:
        app: schema-registry
    spec:
      containers:
      - name: schemaregistry
        image: confluentinc/cp-schema-registry:7.5.0
        ports:
        - containerPort: 8081
