examples/schemaregistry/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: schema-registry-svc
  namespace: confluent
  labels:
    app: schema-registry
spec:
  selector:
    app: schema-registry
  ports:
  - port: 8081
  type: ClusterIP
